--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -225,7 +225,7 @@
 									<input type="hidden" th:value="${item.ix.id}" >
 										<input type="hidden" th:value="${item.typeid}">
 									<div class="qty-btn-group">
-										<input type="text" th:value="${item.name2}" />
+										<input type="text" th:value="${item.name2}" readonly />
 									</div>
 								</td>
 								<td class="hidden-xs"><strong class="text-bold row-total" th:text="${item.name2}*${item.ix.price}"></strong></td>
@@ -237,13 +237,13 @@
 									</a>
 									<a class="entry-title" th:href="@{/menu/toquerymenu1Byid(id=${item.ix.id},type=${item.typeid})}" th:text="${item.ix.mname}">樱花园</a><span class="taocan">(餐饮)</span>
 								</td>
-								<td><span class="unit-price" th:text="${item.ix.price}"></span></td>
+								<td><span class="unit-price" th:text="${item.ix.price}" ></span></td>
 								<td>
 									<input type="hidden" th:value="${item.id}" >
 									<input type="hidden" th:value="${item.ix.id}" >
 									<input type="hidden" th:value="${item.typeid}">
 									<div class="qty-btn-group">
-										<input type="text" th:value="${item.name2}" />
+										<input type="text" th:value="${item.name2}"  readonly/>
 									</div>
 								</td>
 								<td class="hidden-xs"><strong class="text-bold row-total" th:text="${item.name2}*${item.ix.price}"></strong></td>
@@ -261,7 +261,7 @@
 									<input type="hidden" th:value="${item.ix.id}" >
 									<input type="hidden" th:value="${item.typeid}">
 									<div class="qty-btn-group">
-										<input type="text" th:value="${item.name2}" />
+										<input type="text" th:value="${item.name2}" readonly />
 									</div>
 								</td>
 								<td class="hidden-xs"><strong class="text-bold row-total" th:text="${item.name2}*${item.ix.price}"></strong></td>
@@ -276,7 +276,7 @@
 									<input type="hidden" th:value="${item.ix.id}" >
 									<input type="hidden" th:value="${item.typeid}">
 									<div class="qty-btn-group">
-										<input type="text" th:value="${item.name2}" />
+										<input type="text" th:value="${item.name2}" readonly/>
 									</div>
 								</td>
 								<td class="hidden-xs"><strong class="text-bold row-total" th:text="${item.name2}*${item.ix.price}"></strong></td>
@@ -291,7 +291,7 @@
 									<input type="hidden" th:value="${item.ix.id}" >
 									<input type="hidden" th:value="${item.typeid}">
 									<div class="qty-btn-group">
-										<input type="text" th:value="${item.name2}" />
+										<input type="text" th:value="${item.name2}" readonly/>
 									</div>
 								</td>
 								<td class="hidden-xs"><strong class="text-bold row-total" th:text="${item.name2}*${item.ix.price}"></strong></td>
@@ -353,7 +353,6 @@
 					<div class="section">
 						<div class="container">
 							<div class="row">
-
 								<div class="col-xs-12 col-sm-6 col-md-3">
 									<section class="widget widget-text">
 										<h5 class="widget-title">研学旅行 </h5>
@@ -538,10 +537,189 @@
 				sum+=parseFloat($(obj).text());
 			})
 			$("#price").text(sum);
+			
 		})
 </script>
-	
-	
+<!-- 
+<script>
+var pd=0;
+var timelist=[];
+var etimes=new Date();	
+function Xm(number1){
+		mui.ajax('http://192.168.43.139:8080/shopcartshh/query',{
+		  		data:{"orderson":orderson1},
+		  		dataType:'json',//服务器返回json格式数据
+		  		type:'post',//HTTP请求类型
+		  		timeout:10000,//超时时间设置为10秒；
+//		  		processData:false, 
+//		  		contentType:"application/json;charset=UTF-8",
+		  		success:function(data){
+			  			DataXm(data,number1);
+			  			console.log(pd)
+			  			if(pd!=0){
+			  				for (var m=0;m<timelist.length;m++) {
+			  						var li=document.querySelector(".xmpb");
+			  						var times=new Date(timelist[m].time);
+			  						var time=(times.getMonth()+1)+"-"+times.getDate()+" "+times.getHours()+":"+times.getMinutes()+":"+times.getSeconds();
+			  						var etimes=new Date(timelist[m].etime);
+			  						var etime=(etimes.getMonth()+1)+"-"+etimes.getDate()+" "+etimes.getHours()+":"+etimes.getMinutes()+":"+etimes.getSeconds();
+				  					XmPb(li,timelist[m].pname,timelist[m].area,time,etime)
+			  				}
+			  				
+						document.querySelector(".time").style.display="block";
+							    //Date.parse() 解析一个日期时间字符串，并返回1970/1/1 午夜距离该日期时间的毫秒数
+							    var time1 = Date.parse(new Date(timelist[0].time));
+							    var time2 = Date.parse(new Date(timelist[timelist.length-1].time));
+							    var nDays = Math.abs(parseInt((time2 - time1)/1000/3600 / 24));
+								/*if(2 > 0) {
+								
+								}*/
+						}else{
+							var etimes=new Date();
+			  				var startTime=etimes.getFullYear()+"-"+(etimes.getMonth()+1)+"-"+(etimes.getDate()+1)+" "+"7:30:00";
+							mui.ajax('http://192.168.43.139:8080/shopcartshh/query',{
+								data:{"orderson":orderson1,"startTime":startTime},
+								dataType:'json',//服务器返回json格式数据
+								type:'post',//HTTP请求类型
+								timeout:10000,//超时时间设置为10秒；
+								success:function(data){
+									DataXm(data,number1);
+									for (var m=0;m<timelist.length;m++) {
+					  						var li=document.querySelector(".xmpb");
+					  						var times=new Date(timelist[m].time);
+					  						var time=(times.getMonth()+1)+"-"+times.getDate()+" "+times.getHours()+":"+times.getMinutes()+":"+times.getSeconds();
+					  						var etimes=new Date(timelist[m].etime);
+					  						var etime=(etimes.getMonth()+1)+"-"+etimes.getDate()+" "+etimes.getHours()+":"+etimes.getMinutes()+":"+etimes.getSeconds();
+						  					XmPb(li,timelist[m].pname,timelist[m].area,time,etime)
+					  				}
+									
+											document.querySelector(".time").style.display="block";
+									    //Date.parse() 解析一个日期时间字符串，并返回1970/1/1 午夜距离该日期时间的毫秒数
+									    var time1 = Date.parse(new Date(timelist[0].time));
+									    var time2 = Date.parse(new Date(timelist[timelist.length-1].time));
+									    var nDays = Math.abs(parseInt((time2 - time1)/1000/3600 / 24));
+										/*if(nDays > 0) {
+										
+										}*/
+								},
+								error:function(xhr,type,errorThrown){
+								}
+							});
+						}
+					},
+					error: function(xhr, type, errorThrown) {
+					
+				}
+			});
+		}
+function DataXm(data,number1) {
+timelist=[];
+document.querySelector(".xmpb").innerHTML="";
+var hd = 0;
+var etime1 = Date.parse(new Date());
+for(var i = 0; i < data.length; i++) {
+	var be1 = 0;
+	if(data[i].ix != null) {
+		if(data[i].ix.length == undefined) {
+			for(var h = 0; h < data[i].ix.areas.length; h++) {
+				mui.each(data[i].ix.areas[h].worktimes, function(index, item) {
+					mui.each(item, function(index1, item1) {
+						var time3 = Date.parse(new Date(item1.startTime));
+						var pro = {};
+						if(etime1<time3){
+							if(hd == 0 && timelist[hd] == null && time3 > etime1 && number1 < data[i].ix.galleryful) {
+								pro.time = item1.startTime;
+								pro.area = data[i].ix.areas[h].aname;
+								pro.id = data[i].ix.areas[h].aname;
+								pro.pname = data[i].ix.pname;
+								pro.etime = item1.endTime;
+								timelist[hd] = pro;
+								be1++;
+							} else
+							if(timelist[hd] == null && hd != 0 && timelist[hd - 1] != null && item1.startTime > timelist[hd - 1].etime && time3 > etime1 && number1 < data[i].ix.galleryful) {
+								pro.time = item1.startTime;
+								pro.area = data[i].ix.areas[h].aname;
+								pro.pname = data[i].ix.pname;
+								pro.etime = item1.endTime;
+								timelist[hd] = pro;
+								be1++;
+							} else
+							if(timelist[hd] != null && timelist[hd - 1] != null && timelist[hd].time > item1.startTime && timelist[hd - 1].etime < item1.startTime && time3 > etime1 && number1 < data[i].ix.galleryful) {
+								var pro = {};
+								pro.time = item1.startTime;
+								pro.area = data[i].ix.areas[h].aname;
+								pro.pname = data[i].ix.pname;
+								pro.etime = item1.endTime;
+								timelist[hd] = pro;
+								be1++;
+							}
+							pd++;
+						}else{
+							pd=0;
+						}
+						
+					})
+				})
+				if(be1 != 0) {
+					break;
+					be1 = 0;
+				}
+			}
+			hd++;
+		} else {
+			for(var j = 0; j < data[i].ix.length; j++) {
+				var be = 0;
+				for(var h = 0; h < data[i].ix[j].areas.length; h++) {
+					mui.each(data[i].ix[j].areas[h].worktimes, function(index, item) {
+						mui.each(item, function(index1, item1) {
+							var time3 = Date.parse(new Date(item1.startTime));
+							var pro = {};
+								if(etime1<time3){
+									if(hd == 0 && timelist[hd] == null && time3 > etime1 && number1 < data[i].ix[j].galleryful) {
+									pro.time = item1.startTime;
+									pro.area = data[i].ix[j].areas[h].aname;
+									pro.pname = data[i].ix[j].pname;
+									pro.etime = item1.endTime;
+									timelist[hd] = pro;
+									be++;
+								} else
+								if(timelist[hd] == null && hd != 0 && item1.startTime > timelist[hd - 1].etime && time3 > etime1 && number1 < data[i].ix[j].galleryful) {
+									pro.time = item1.startTime;
+									pro.area = data[i].ix[j].areas[h].aname;
+									pro.pname = data[i].ix[j].pname;
+									pro.etime = item1.endTime;
+									timelist[hd] = pro;
+									be++;
+								} else
+								if(timelist[hd] != null && timelist[hd].time > item1.startTime && timelist[hd - 1].etime < item1.startTime && time3 > etime1 && number1 < data[i].ix[j].galleryful) {
+									var pro = {};
+									pro.time = item1.startTime;
+									pro.area = data[i].ix[j].areas[h].aname;
+									pro.pname = data[i].ix[j].pname;
+									pro.etime = item1.endTime;
+									timelist[hd] = pro;
+									be++;
+								}
+							pd++;
+						}else{
+							pd=0;
+						}
+						})
+					})
+					if(be != 0) {
+						break;
+						be = 0;
+					}
+				}
+				hd++;
+			}
+		}
+	}
+}
+}	
+
+</script>	
+ -->	
 	
 </body>
 </html>
