--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -834,8 +834,8 @@
 				data:JSON.stringify(umorder),
 				contentType:"application/json;charset=utf-8",
 				success:function(data){
-					if(data>0){
-						alert("下单成功");
+					if(data!=null){
+						alert("生成订单成功");
 						location.href="/customer/buy";
 					}
 				}
