--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -30,7 +30,7 @@
 	}
 </style>
 <body>
-	<!--头部  -->
+		<!--头部  -->
 			<header id="site-header" role="banner">
 				<!-- HEADER TOP -->
 				<div class="header-top">
@@ -60,38 +60,12 @@
 										</div>
 										<!-- // SEARCH BOX -->
 									</li>
-									<li data-toggle="sub-header" data-target="#sub-social">
-										<!-- SOCIAL ICONS -->
-										<a href="javascript:void(0);" id="social-icons">
-											<i class="iconfont-share round-icon"></i>
-										</a>
-
-										<div id="sub-social" class="sub-header">
-											<ul class="social-list unstyled text-center">
-												<li>
-													<a href="#"><i class="iconfont-facebook round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-twitter round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-google-plus round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-pinterest round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-rss round-icon"></i></a>
-												</li>
-											</ul>
-										</div>
-										<!-- // SOCIAL ICONS -->
-									</li>
 									<li data-toggle="sub-header" data-target="#sub-cart">
 										<!-- SHOPPING CART -->
-										<a href="javascript:void(0);" id="total-cart">
+										<a th:href="@{/customer/look}" id="total-cart">
 											<i class="iconfont-shopping-cart round-icon"></i>
 										</a>
+										<!-- // SHOPPING CART -->
 									</li>
 								</ul>
 							</div>
@@ -192,6 +166,7 @@
 				<!-- // MAIN HEADER -->
 			</header>
 		
+	
 	<div id="page-wrapper">
 		<main id="main-content" role="main">
 			<section class="section">
@@ -207,7 +182,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="empty-cart" th:if=" ${list}==null">
+							<tr class="empty-cart" th:if="${#lists.size(list)==0}">
 								<td colspan="5">
 									<a th:href="@{/xjb_projectController/query_Qt}">您的购物车目前没有项目,快去看看吧 </a>
 								</td>
