--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -13,124 +13,108 @@
 		<link rel="stylesheet" th:href="@{/assets/libraries/bootstrap-fileupload/bootstrap-fileupload.css}" type="text/css">
 		<link rel="stylesheet" th:href="@{/assets/libraries/jquery-ui-1.10.2.custom/css/ui-lightness/jquery-ui-1.10.2.custom.min.css}" type="text/css">
 		<link rel="stylesheet" th:href="@{/assets/css/realia-blue.css}" type="text/css" id="color-variant-default">
-		<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
-		<script src="js1/modernizr.min.js"></script>	
+		<script>window.jQuery || document.write('<script th:src="@{/js1/jquery.min.js}"><\/script>');</script>
+		<script th:src="@{/js1/modernizr.min.js}"></script>	
 		<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
 		<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
 		<link th:href="@{/css1/flexslider.css}" rel="stylesheet" />
 		<link rel="stylesheet" th:href="@{/css1/responsive.css}">
-			<title>Realia | HTML Template</title>
+		<link th:href="@{/css1/innerpage.css}" rel="stylesheet">
+		<title>Realia | HTML Template</title>
 	</head>
+	<style>
+		a:hover{
+			text-decoration: none;
+		}
+	</style>
 	<body>
-		
+			<!--头部  -->
 			<header id="site-header" role="banner">
-			<!-- HEADER TOP -->
-			<div class="header-top">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-sm-6 col-md-7">
-							<!-- CONTACT INFO -->
-							<div class="contact-info">
-								<i class="iconfont-headphones round-icon"></i>
-								<strong>+444 (100) 1234</strong>
-								<span>(周一- 周五: 09.00 - 21.00)</span>
+				<!-- HEADER TOP -->
+				<div class="header-top">
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12 col-sm-6 col-md-7">
+								<!-- CONTACT INFO -->
+								<div class="contact-info">
+									<i class="iconfont-headphones round-icon"></i>
+									<strong>+444 (100) 1234</strong>
+									<span>(周一- 周五: 09.00 - 21.00)</span>
 								</div>
-							<!-- // CONTACT INFO -->
-						</div>
-						<div class="col-xs-12 col-sm-6 col-md-5">
-							<ul class="actions unstyled clearfix" style="height: 40px;">
-								<li style="height: 30px;">
-									<!-- SEARCH BOX -->
-									<div class="search-box">
-										<form action="#" method="post">
-											<div class="input-iconed prepend">
-												<button class="input-icon"><i class="iconfont-search"></i></button>
-												<label for="input-search" class="placeholder">在这里搜索</label>
-												<input type="text" name="q" id="input-search" style="height: 30px; border-radius: 10px 10px;" class="round-input full-width" required />
-											</div>
-										</form>
-									</div>
-									<!-- // SEARCH BOX -->
-								</li>
-								<li data-toggle="sub-header" data-target="#sub-social">
-									<!-- SOCIAL ICONS -->
-									<a href="javascript:void(0);" id="social-icons">
-										<i class="iconfont-share round-icon"></i>
-									</a>
-									
-									<div id="sub-social" class="sub-header">
-										<ul class="social-list unstyled text-center">
-											<li><a href="#"><i class="iconfont-facebook round-icon"></i></a></li>
-											<li><a href="#"><i class="iconfont-twitter round-icon"></i></a></li>
-											<li><a href="#"><i class="iconfont-google-plus round-icon"></i></a></li>
-											<li><a href="#"><i class="iconfont-pinterest round-icon"></i></a></li>
-											<li><a href="#"><i class="iconfont-rss round-icon"></i></a></li>
-										</ul>
-									</div>
-									<!-- // SOCIAL ICONS -->
-								</li>
-								<li data-toggle="sub-header" data-target="#sub-cart">
-									<!-- SHOPPING CART -->
-									<a href="javascript:void(0);" id="total-cart">
-										<i class="iconfont-shopping-cart round-icon"></i>
-									</a>
-									
-									<div id="sub-cart" class="sub-header">
-										<div class="cart-header">
-											<span>你的购物车是空的</span>
-											<small><a href="cart.html">(See All)</a></small>
+								<!-- // CONTACT INFO -->
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-5">
+								<ul class="actions unstyled clearfix" style="height:40px;">
+									<li style="height:30px">
+										<!-- SEARCH BOX -->
+										<div class="search-box">
+											<form action="#" method="post">
+												<div class="input-iconed prepend">
+													<button class="input-icon"><i class="iconfont-search"></i></button>
+													<label for="input-search" class="placeholder">在这里搜索</label>
+													<input type="text" name="q" id="input-search" style="height:30px;border-radius: 10px 10px;" class="round-input full-width" required />
+												</div>
+											</form>
 										</div>
-										<ul class="cart-items product-medialist unstyled clearfix"></ul>
-										<div class="cart-footer">
-											<div class="cart-total clearfix">
-												<span class="pull-left uppercase">总计</span>
-												<span class="pull-right total">￥ 0</span>
-											</div>
-											<div class="text-right">
-												<a href="cart.html" class="btn btn-default btn-round view-cart">查看</a>
-											</div>
-										</div>
-									</div>
-									<!-- // SHOPPING CART -->
-								</li>
-							</ul>
+										<!-- // SEARCH BOX -->
+									</li>
+									<li data-toggle="sub-header" data-target="#sub-cart">
+										<!-- SHOPPING CART -->
+										<a th:href="@{/customer/look}" id="total-cart">
+											<i class="iconfont-shopping-cart round-icon"></i>
+										</a>
+										<!-- // SHOPPING CART -->
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
+
+					<!-- ADD TO CART MESSAGE -->
+					<div class="cart-notification">
+						<ul class="unstyled"></ul>
+					</div>
+					<!-- // ADD TO CART MESSAGE -->
 				</div>
-				
-				<!-- ADD TO CART MESSAGE -->
-				<div class="cart-notification">
-					<ul class="unstyled"></ul>
-				</div>
-				<!-- // ADD TO CART MESSAGE -->
-			</div>
-			<!-- // HEADER TOP -->
-			<!-- MAIN HEADER -->
-			<div class="main-header-wrapper">
-				<div class="container">
-					<div class="main-header">
-						<!-- CURRENCY / LANGUAGE / USER MENU -->
-						<div class="actions">
-							<div class="center-xs">
-								<!-- CURRENCY -->
-								<ul class="option-list unstyled">
-									<li class="active"><a href="#" data-toggle="tooltip" title="人民币">￥</a></li>
-									<li><a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a></li>
-									<li><a href="#" data-toggle="tooltip" title="EUR - Euro">€</a></li>
-								</ul>
-								<!-- // CURRENCY -->
-								<!-- LANGUAGES -->
-								<ul class="option-list unstyled">
-									<li class="active"><a href="#" data-toggle="tooltip" title="中文">CH</a></li>
-									<li><a href="#" data-toggle="tooltip" title="French">FR</a></li>
-									<li><a href="#" data-toggle="tooltip" title="Deutsch">DE</a></li>
-								</ul>
-								<!-- // LANGUAGES -->
-							</div>
-							<div class="clearfix"></div>
-							<!-- USER RELATED MENU -->
-							<nav id="tiny-menu" class="clearfix">
-								<ul class="user-menu">
+				<!-- // HEADER TOP -->
+				<!-- MAIN HEADER -->
+				<div class="main-header-wrapper">
+					<div class="container">
+						<div class="main-header">
+							<!-- CURRENCY / LANGUAGE / USER MENU -->
+							<div class="actions">
+								<div class="center-xs">
+									<!-- CURRENCY -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="人民币">￥</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="EUR - Euro">€</a>
+										</li>
+									</ul>
+									<!-- // CURRENCY -->
+									<!-- LANGUAGES -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="中文">CH</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="French">FR</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="Deutsch">DE</a>
+										</li>
+									</ul>
+									<!-- // LANGUAGES -->
+								</div>
+								<div class="clearfix"></div>
+								<!-- USER RELATED MENU -->
+								<nav id="tiny-menu" class="clearfix">
+									<ul class="user-menu">
 										<li>
 											<a th:href="@{/customer/toPerson}">我的账户</a>
 										</li>
@@ -140,100 +124,56 @@
 										<li>
 											<a th:href="@{/Login/back}">登出</a>
 										</li>
+									</ul>
+								</nav>
+								<!-- // USER RELATED MENU -->
+							</div>
+							<!-- // CURRENCY / LANGUAGE / USER MENU -->
+							<!-- SITE LOGO -->
+							<div class="logo-wrapper">
+								<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
+									<img th:src="@{/images/logo2.png}" alt="Logo" />
+								</a>
+							</div>
+							<!-- // SITE LOGO -->
+							<!-- SITE NAVIGATION MENU -->
+							<nav id="site-menu" role="navigation">
+								<ul class="main-menu hidden-sm hidden-xs">
+									<li class="active">
+										<a th:href="@{/customer/topagehome}">首页</a>
+									</li>
+									<li>
+										<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
+									</li>
+									<li>
+										<a th:href="@{/menu/toquerymenu1}">餐饮</a>
+									</li>
+									<li>
+										<a th:href="@{/room/toqueryqtroom}">住宿</a>
+									</li>
+
+									<li>
+										<a th:href="@{/customer/toPerson}">个人中心</a>
+									</li>
 								</ul>
 							</nav>
-							<!-- // USER RELATED MENU -->
+							<!-- // SITE NAVIGATION MENU -->
 						</div>
-						<!-- // CURRENCY / LANGUAGE / USER MENU -->
-						<!-- SITE LOGO -->
-						<div class="logo-wrapper">
-							<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
-								<img th:src="@{/images/logo2.png}" alt="Logo" />
-							</a>
-						</div>
-						<!-- // SITE LOGO -->
-						<!-- SITE NAVIGATION MENU -->
-						<nav id="site-menu" role="navigation">
-							<ul class="main-menu hidden-sm hidden-xs">
-										<li class="active">
-											<a th:href="@{/customer/topagehome}">首页</a>
-										</li>
-										<li>
-											<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
-										</li>
-										<li>
-											<a th:href="@{/menu/toquerymenu1}">餐饮</a>
-										</li>
-										<li>
-											<a th:href="@{/room/toqueryqtroom}">住宿</a>
-										</li>
-	
-										<li>
-											<a th:href="@{/customer/toPerson}">个人中心</a>
-										</li>
-							</ul>
-							
-							<!-- MOBILE MENU -->
-							<div id="mobile-menu" class="dl-menuwrapper visible-xs visible-sm">
-								<button class="dl-trigger"><i class="iconfont-reorder round-icon"></i></button>
-								<ul class="dl-menu">
-									<li class="active">
-										<a href="javsacript:void(0);">Home</a>
-									</li>
-									<li>
-										<a href="javsacript:void(0);">Women</a>
-									</li>
-									<li>
-										<a href="javsacript:void(0);">Men</a>
-										
-										<ul class="dl-submenu">
-											<li>
-												<a href="products.html">Clothing</a>
-												<ul class="dl-submenu">
-													<li><a href="products.html">Casual Wear</a></li>
-													<li><a href="products.html">Evening Wear</a></li>
-													<li><a href="products.html">Formal Attire</a></li>
-													<li><a href="products.html">Womens Jeans</a></li>
-													<li><a href="products.html">Mens Jeans</a></li>
-													<li><a href="products.html">Fall Styles</a></li>
-												</ul>
-											</li>
-											<li>
-												<a href="products.html">Accessories</a>
-												<ul class="dl-submenu">
-													<li><a href="products.html">Casual Wear</a></li>
-													<li><a href="products.html">Evening Wear</a></li>
-													<li><a href="products.html">Formal Attire</a></li>
-													<li><a href="products.html">Womens Jeans</a></li>
-													<li><a href="products.html">Mens Jeans</a></li>
-													<li><a href="products.html">Fall Styles</a></li>
-												</ul>
-											</li>
-											<li>
-												<a href="products.html">Brands</a>
-												<ul class="dl-submenu">
-													<li><a href="products.html">Casual Wear</a></li>
-													<li><a href="products.html">Evening Wear</a></li>
-													<li><a href="products.html">Formal Attire</a></li>
-													<li><a href="products.html">Womens Jeans</a></li>
-													<li><a href="products.html">Mens Jeans</a></li>
-													<li><a href="products.html">Fall Styles</a></li>
-												</ul>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-							<!-- // MOBILE MENU -->
-	
-						</nav>
-						<!-- // SITE NAVIGATION MENU -->
 					</div>
 				</div>
+				<!-- // MAIN HEADER -->
+			</header>
+				<!-- BREADCRUMB -->
+		<div class="breadcrumb-container">
+			<div class="container">
+				<div class="relative">
+					<ul class="bc unstyled clearfix">
+						<li><a th:href="@{/customer/topagehome}">首页</a></li>
+						<li class="active" >住宿</li>
+					</ul>
+				</div>
 			</div>
-			<!-- // MAIN HEADER -->
-		</header>
-			
+		</div>	
 		
 		<div id="wrapper-outer">
 			<div id="wrapper">
