--- a/src/main/resources/templates/Person.html
+++ b/src/main/resources/templates/Person.html
@@ -193,10 +193,10 @@
 							<div class="promo inverse-background" th:style="'background: url('+'/images/demo/Barn-Dress-Girl_t.jpg'+') no-repeat;background-size:auto 100%;'">
 								<div class="inner text-center np">
 									<div class="ribbon">
-										<h6 class="nmb">新的套餐</h6>
-										<h5 class="text-semibold uppercase nmb">套餐XXXXXX</h5>
+										<h6 class="nmb">新的项目</h6>
+										<h5 class="text-semibold uppercase nmb"></h5>
 										<div class="space10"></div>
-										<a href="products.html" class="with-icon prepend-icon"><i class="iconfont-caret-right"></i><span>立即下单</span></a>
+										<a th:href="@{/xjb_projectController/query_Qt}" class="with-icon prepend-icon"><i class="iconfont-caret-right"></i><span>前去选择</span></a>
 									</div>
 								</div>
 							</div>
