--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -22,8 +22,13 @@
 			#main-content .section {
 				padding-bottom: 30px;
 			}
+			.img{
+				height: 300px;
+				width: 260px;
+			}
 		</style>
 	</head>
+	
 
 	<body class="home">
 		<div id="page-wrapper">
@@ -303,52 +308,6 @@
 				</script>
 			</div>
 			<main id="main-content" role="main">
-				<!-- 导航  -->
-				<section class="section promos">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-4">
-								<div class="promo accent-background first-child first-row animated" data-animation="fadeInLeft">
-									<div class="inner text-center">
-										<h1 class="uppercase text-semibold">
-										<a href="products.html">
-											<span class="inverse-color">活动套餐</span> 高达 50% <span class="inverse-color"></span>
-										</a>
-									</h1>
-										<h5 class="uppercase">前去查看</h5>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-md-4">
-								<div class="promo inverse-background first-row animated" data-animation="fadeInDown" th:style="'background: url('+'/images/demo/P2200214.jpg'+') no-repeat;background-size: 100%;'">
-									<div class="inner text-center np">
-										<div class="ribbon">
-											<h6 class="nmb">餐饮套餐</h6>
-											<h5 class="text-semibold uppercase nmb">套餐XXXXXX</h5>
-											<div class="space10"></div>
-											<a href="products.html" class="with-icon prepend-icon"><i class="iconfont-caret-right"></i><span>立即下单</span></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="promo accent-background first-child first-row animated" data-animation="fadeInLeft">
-									<div class="inner text-center">
-										<h1 class="uppercase text-semibold">
-										<a href="products.html">
-											<span class="inverse-color">住宿套餐</span> 高达 40% <span class="inverse-color"></span>
-										</a>
-									</h1>
-										<h5 class="uppercase">前去查看</h5>
-									</div>
-								</div>
-							</div>
-							
-
-						</div>
-					</div>
-				</section>
 				<!--  活动套餐推荐-->
 				<section class="section featured visible-items-4">
 					<div class="container">
@@ -552,232 +511,38 @@
 							<!-- BEGIN CAROUSEL -->
 							<div id="new-arrivals-products" class="add-cart" data-product=".product" data-thumbnail=".entry-media .thumb" data-title=".entry-title > a" data-url=".entry-title > a" data-price=".entry-price > .price">
 
-								<div class="owl-controls clickable outside">
+								<div class="owl-controls clickable outside" th:if="${#lists.size(menulist)!=0}">
 									<div class="owl-buttons">
 										<div class="owl-prev"><i class="iconfont-angle-left"></i></div>
 										<div class="owl-next"><i class="iconfont-angle-right"></i></div>
 									</div>
 								</div>
-
 								<div class="owl-carousel owl-theme" data-visible-items="5" data-navigation="true" data-lazyload="true">
-									<div class="product" data-product-id="9">
+									<div class="product" data-product-id="9" th:each="item : ${menulist}">
 										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/271865-0286_1_t.jpg}" alt="" class="lazyOwl thumb" />
+											<img th:src="${item.image.url}" alt="" class="lazyOwl thumb img"  />
 											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
-													</li>
-													<li>
-														<a href="images/men/jacket/271865-0286_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing9" />
-													<div class="rateit" data-rateit-backingfld="#backing9" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐一</a>
-										</h5>
-											<div class="entry-price">
-												<s class="entry-discount">￥ 350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="10">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/634082-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/jacket/634082-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4" step="0.5" id="backing10" />
-													<div class="rateit" data-rateit-backingfld="#backing10" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐二</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="11">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/217365-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
+												<a th:href="@{/menu/toquerymenu1Byid(id=${item.id},type=4)}" class="entry-url"></a>
 												<ul class="icons unstyled">
 													<li>
 														<div class="circle ribbon ribbon-new">New</div>
 													</li>
 													<li>
-														<a href="images/men/jacket/217365-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
+														<a th:href="${item.image.url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
 													</li>
 												</ul>
-												<div class="rate-bar">
-													<input type="range" value="3.5" step="0.5" id="backing11" />
-													<div class="rateit" data-rateit-backingfld="#backing11" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
 											</div>
 										</div>
 										<div class="entry-main">
 											<h5 class="entry-title">
-											<a href="#">套餐三</a>
+											<a href="#" th:text="${item.mname}"></a>
 										</h5>
 											<div class="entry-price">
-												<strong class="price">￥ 450.00</strong>
+												<strong class="accent-color price" th:text="'￥'+${item.price}">￥ 250.00</strong>
 											</div>
 										</div>
 									</div>
 
-									<div class="product" data-product-id="12">
-										<div class="entry-media">
-											<img th:src="@{/images/men/blazer/105797-1056_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/blazer/105797-1056_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="5" step="0.5" id="backing12" />
-													<div class="rateit" data-rateit-backingfld="#backing12" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐四</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="13">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jumper/271866-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
-													</li>
-													<li>
-														<a href="images/men/jumper/271866-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing13" />
-													<div class="rateit" data-rateit-backingfld="#backing13" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐五</a>
-										</h5>
-											<div class="entry-price">
-												<s class="entry-discount">￥350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="14">
-										<div class="entry-media">
-											<img th:src="@{/images/men/shirt/803500-6989_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/shirt/803500-6989_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4" step="0.5" id="backing14" />
-													<div class="rateit" data-rateit-backingfld="#backing14" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐六</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="15">
-										<div class="entry-media">
-											<img th:src="@{/images/men/shirt/217360-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-new">New</div>
-													</li>
-													<li>
-														<a href="images/men/shirt/217360-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="3.5" step="0.5" id="backing15" />
-													<div class="rateit" data-rateit-backingfld="#backing15" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐七</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 450.00</strong>
-											</div>
-										</div>
-									</div>
-
-									
 
 							</div>
 							<!-- // END CAROUSEL -->
